# harvard-references-server

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  responder.h
controllers/: CMakeLists.txt  _error.h  async.h  controllers.cpp  controllers.h  errors.h  harvard-references.cpp  harvard-references.h  harvardReferences.cpp  utils.h  verifyFields.h
controllers/harvardReferencesTypeHandlers/: book.h  bookChapter.h  conferenceProceeding.h  journalArticle.h  typeHandler.h  typeHandlers.h  verifyFields.h  webpage.h  website.h
controllers/typeHandlers/: book.h  bookChapter.h  conferenceProceeding.h  journalArticle.h  typeHandlers.h  webpage.h  website.h
controllers/typeHandlers/utils/: authors.h  date_time.h  html.h  types.h  utils.h
controllers/utils/: dateTime.h  date_time.h  html.h  names.h  utils.h
cppbox/: Dockerfile  readme.md  run.sh  run_debug.sh
includes/: crow_master_51a8a977d936902be859d80ccdf3217d15905f2e_unused.h  crow_release_v0.2.h  global.h  html.h  utils.h
schema/: _error.h  _fields.h  field.h  fields.h  schema.h  schemas.h  verifyFields.cpp  verifyFields.h
security/: sanitizeJSON.cpp
src/: main.cpp  readme.md  responder.h
src/controllers/: CMakeLists.txt  controllers.cpp  controllers.h  initialize.cpp  respondToGET.cpp  respondToOPTIONS.cpp
src/controllers/typeHandlers/: _book.h  _bookChapter.h  _conferenceProceeding.h  _journalArticle.h  _typeHandler.h  _webpage.h  _website.h  book.h  bookChapter.h  conferenceProceeding.h  typeHandlers.h  website.h
src/controllers/utils/: _dateTime.h  _html.h  _names.h  dateTime.h  utils.h
src/includes/: crow_release_v0.2.h  magic_enums.h
src/schema/: _field.h  _generateSchemaJSON.h  verifyFields.cpp
src/schema/utils/: utils.h
src/security/: sanitizeJSON.cpp  security.h
